25 Oct 2005 mipsator
 * added support for sub headers, language label and language option in
   pmkscan.

24 Oct 2005 mipsator
 * fixed a bug when generating a pmkfile that has no checks, noticed by
   veins of skreel.org.
 * set './scanfile' as default specification file for pmkscan when no
   option is given at the command line.

# snapshot 0.9.3-s3

23 Oct 2005 mipsator
 * misc changes before new snapshot.

19 Oct 2005 mipsator
 * improved/fixed the pmkfile generation in pmkscan.

13 Oct 2005 mipsator
 * polished checks in func.
 * added scanfile.5 man page.

10 Oct 2005 mipsator
 * rewritten check_header() and check_type() to guarantee the recording
   of tags.

06 Oct 2005 mipsator
 * added conv_to_label() to fix label generation in pmkscan.

05 Oct 2005 mipsator
 * new engine for pmkfile generation in pmkscan (thought need to have a
   better engine for label names).

02 Oct 2005 mipsator
 * fixed command line option parsing in pmksetup (broken after 0.9.3 with
   prseng import).

28 Sep 2005 mipsator
 * splitted member detection in CHECK_TYPE, now type and member are
   checked separatly.

27 Sep 2005 mipsator
 * polished code builder stuff, now used in check_header, check_lib and
   check_type.

24 Sep 2005 mipsator
 * unbreak the pmkfile.
 * fixed shared library support bug when system is not supported.

03 Sep 2005 mipsator
 * imported primary work on code builder engine.

# snapshot 0.9.3-s2

21 Aug 2005 mipsator
 * replaced stdio.h by pmk_stdio.h.
 * replaced old tests/Makefile.pmk by the one generated by pmkscan
   (removed unneeded targets and install stuff).
 * fixed tests so all compile without warnings.

20 Aug 2005 mipsator
 * replaced old makefile template by the one generated by pmkscan
   (CFLAGS has been modified and added CONFDIR and PRIVSEP_USER).
 * enabled compat tests.
 * updated pmkscan latest changes (polishing).

18 Aug 2005 mipsator
 * added MANDIR and SYSCONFDIR support in pmkscan.