@@ -49,11 +49,15 @@ resulting template
 .It Pa pmkscan.dat
 .Xr pmkscan 1
 database
+.It Pa scanfile
+.Xr pmkscan 1
+specifications file
 .El
 
 .Sh SEE ALSO
 .Xr pmk 1 ,
 .Xr pmkfile 5
+.Xr scanfile 5
 
 .Sh AUTHOR
 .An Damien Couderc .
