@@ -53,6 +53,7 @@
 #endif
 
 #define PMKSCAN_DATA	DATADIR "/pmkscan.dat"
+#define PMKSCAN_CFGFILE	"config.h.scan"
 #define PMKSCAN_PMKFILE	"pmkfile.scan"
 #define PMKSCAN_MKFILE	"Makefile.scan"
 #define PMKSCAN_CONFIG	"scanfile"
@@ -105,15 +106,18 @@ enum {
 #define KW_CMD_GENZN	"GEN_ZONE"
 
 /* script keyword options */
+#define KW_OPT_ADVTAG	"ADVTAG"
+#define KW_OPT_CFGALT	"CFGNAME"
 #define KW_OPT_DIR		"DIRECTORY"
 #define KW_OPT_DSC		"DISCARD"
 #define KW_OPT_MKF		"MAKEFILE"
+#define KW_OPT_MKFALT	"MKFNAME"
 #define KW_OPT_PMK		"PMKFILE"
 #define KW_OPT_REC		"RECURSE"
 #define KW_OPT_UNI		"UNIQUE"
 
 /* common options */
-#define KW_OPT_NAM		"NAME"
+#define KW_OPT_NAM		"NAME"	/* OBSOLETE */
 
 /* file types **********************************************************/
 enum {
@@ -139,7 +143,8 @@ enum {
 	FILE_TYPE_MAN6,
 	FILE_TYPE_MAN7,
 	FILE_TYPE_MAN8,
-	FILE_TYPE_MAN9,		/* end of man categories */
+	FILE_TYPE_MAN9,
+	/* end of man categories */
 	FILE_TYPE_TEMPL,
 	FILE_TYPE_TEXT,
 	FILE_TYPE_YACC,
@@ -158,6 +163,8 @@ enum {
 #define OBJ_SUFFIX		".o"
 
 #define STR_TIME_GEN	"%Y-%m-%d %H:%M"
+
+#define CFGF_HDR_GEN	"/* config file generated by pmkscan (%s) */\n\n"
 
 #define PMKF_HDR_GEN	"pmkfile generated by pmkscan (%s).\n"
 
@@ -409,12 +416,14 @@ typedef struct {
 typedef struct {
 	bool		 found[NB_FILE_TYPE],	/* file type flags */
 				 found_src,				/* source file flag */
-				 recursive,				/* recursive scan flag */
-				 unique,				/* unique file flag */
+				 advtag,				/* use advanced tagging */
 				 gen_pmk,				/* pmkfile generation flag */
-				 gen_mkf;				/* makefile generation flag */
+				 gen_mkf,				/* makefile generation flag */
+				 recursive,				/* recursive scan flag */
+				 unique;				/* unique file flag */
 	char		*directory,				/* initial directory */
-				*mkf_name;				/* optional makefile name */
+				*cfg_name,				/* alternate config file name */
+				*mkf_name;				/* alternate makefile name */
 	dynary		*dirlist,				/* scanned directory list */
 				*dirscan,				/* directory list to scan (just a pointer) */
 				*manpgs,				/* man pages dynary */
@@ -424,6 +433,7 @@ typedef struct {
 	htable		*nodes,					/* global nodes table */
 				*objects,				/* zone objects */
 				*targets,				/* zone targets */
+				*tags,					/* zone tags */
 				*h_checks,				/* zone header checks */
 				*l_checks,				/* zone header checks */
 				*t_checks;				/* zone type checks */
@@ -453,13 +463,13 @@ typedef struct {
  * functions prototypes *
  ***********************************************************************/
 
-/* init functions */
+/* init functions ******************************************************/
 scn_node_t	*scan_node_init(char *);
 void		 scan_node_destroy(scn_node_t *);
 scn_zone_t	*scan_zone_init(htable *);
 void		 scan_zone_destroy(scn_zone_t *);
 
-/* pmkfile specific */
+/* pmkfile specific ****************************************************/
 check_t		*init_chk_cell(char *);
 void		 destroy_chk_cell(check_t *);
 check_t		*mk_chk_cell(htable *, int);
@@ -477,12 +487,13 @@ void		 build_boolean(FILE *, char *, bool);
 void		 build_quoted(FILE *, char *, char *);
 bool		 build_list(FILE *, char *, dynary *);
 bool		 set_lang(FILE *, ftype_t);
-bool		 output_header(htable *, char *, scandata *, FILE *);
-bool		 output_library(htable *, char *, scandata *, FILE *);
-bool		 output_type(htable *, char *, scandata *, FILE *);
-bool		 scan_build_pmk(char *, scn_zone_t *, scandata *);
+bool		 output_header(htable *, char *, FILE *);
+bool		 output_library(htable *, char *, FILE *);
+bool		 output_type(htable *, char *, FILE *);
+bool		 scan_build_pmk(char *, scn_zone_t *);
+bool		 scan_build_cfg(scn_zone_t *);
 
-/* makefile specific */
+/* makefile specific ***************************************************/
 bool		 find_deps(dynary *, dynary *);
 void		 extract_dir(char *, char *, size_t);
 void		 build_path(char *, char *, char *, size_t);
@@ -500,7 +511,7 @@ void		 mkf_output_data_trgs(FILE *, scn_zone_t *);
 void		 mkf_output_obj_rules(FILE *, scn_zone_t *);
 void		 mkf_output_trg_rules(FILE *, scn_zone_t *);
 void		 mkf_output_man_inst(FILE *, scn_zone_t *);
-bool		 scan_build_mkf(char *, scn_zone_t *);
+bool		 scan_build_mkf(scn_zone_t *);
 
 /* common functions */
 void		 psc_log(char *, char *, ...);
