@@ -29,16 +29,16 @@ GEN_ZONE(main) {
 	DISCARD = ("samples", "doc", "tests")
 	PMKFILE = TRUE
 	MAKEFILE = TRUE
-	NAME = "Makefile.pmk"
-	UNIQUE = TRUE
+#	UNIQUE = TRUE
 }
 
 GEN_ZONE(tests) {
 	DIRECTORY = "./tests"
 	RECURSE = TRUE
 	PMKFILE = TRUE
+	CFGNAME = "config.h.sample"
 	MAKEFILE = TRUE
-	NAME = "Makefile.pmk"
-	UNIQUE = TRUE
+	MKFNAME = "Makefile.sample"
+#	UNIQUE = TRUE
 }
 
